--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  background-image: url("/src/assets/bg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color:rgba(82, 97, 41, 0.425)
+}
